<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addViewModel"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?android:attr/actionBarSize">


        <TextView
            android:id="@+id/title_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/input_shoe_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{addViewModel.name}"
            app:layout_constraintBottom_toTopOf="@+id/title_company_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_shoe_name" />

        <TextView
            android:id="@+id/title_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/company_name"
            app:layout_constraintBottom_toTopOf="@+id/input_company_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{addViewModel.company}"
            app:layout_constraintBottom_toTopOf="@+id/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_company_name" />

        <TextView
            android:id="@+id/title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/input_size"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{addViewModel.size}"
            app:layout_constraintBottom_toTopOf="@+id/title_description"
            app:layout_constraintStart_toStartOf="@+id/title_size" />

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/input_description"
            app:layout_constraintStart_toStartOf="parent" />

        <!--    </LinearLayout>-->

        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="144dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{addViewModel.description}"
            app:layout_constraintBottom_toTopOf="@+id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/title_description" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorCancel"
            android:text="@string/button_cancel"
            android:textColor="@color/white_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/white_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>