<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ConstraintLayout: flattens nested/hierarchical components tree -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:hint="@string/shoe_name"
            app:layout_constraintStart_toEndOf="@id/shoe_name_label"
            app:layout_constraintTop_toTopOf="@id/shoe_name_label" />

        <TextView
            android:id="@+id/company_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:layout_marginTop="4dp"
            android:text="@string/company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_label" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:hint="@string/company_name"
            app:layout_constraintStart_toEndOf="@id/company_name_label"
            app:layout_constraintTop_toTopOf="@id/company_name_label" />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:layout_marginTop="4dp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_name_label" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:hint="@string/size"
            app:layout_constraintStart_toEndOf="@id/size_label"
            app:layout_constraintTop_toTopOf="@id/size_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="19sp"
            android:hint="@string/description"
            app:layout_constraintStart_toEndOf="@id/description_label"
            app:layout_constraintTop_toTopOf="@id/description_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>