<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.screens.welcome.WelcomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_title"
            android:text="@string/title_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/ds_black_pure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="241dp"
            android:layout_height="202dp"
            android:layout_marginTop="48dp"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_title"
            app:srcCompat="@drawable/sneakers" />

        <TextView
            android:id="@+id/onboarding_subtitle"
            android:textStyle="normal"
            android:textColor="@color/ds_grey_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="3sp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/onboarding_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_image" />


        <TextView
            android:id="@+id/onboarding_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:textStyle="bold"
            android:text="@string/button_next"
            android:textColor="@color/color_light_brand_color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboarding_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>