<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="instructionViewModel"
            type="com.udacity.shoestore.screens.instruction.InstructionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/instruction_image"
            android:layout_width="241dp"
            android:layout_height="202dp"
            android:layout_marginTop="48dp"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/software" />

        <TextView
            android:id="@+id/instruction_subtitle"
            android:textStyle="normal"
            android:textColor="@color/ds_grey_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="3sp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/instruction_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_image" />

        <ImageView
            android:id="@+id/instruction_plus_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/instruction_text_one"
            app:layout_constraintStart_toStartOf="@id/instruction_subtitle"
            app:layout_constraintTop_toTopOf="@id/instruction_text_one"
            app:srcCompat="@drawable/plus" />

        <TextView
            android:id="@+id/instruction_text_one"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/instruction_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/instruction_plus_image"
            app:layout_constraintTop_toBottomOf="@id/instruction_subtitle"
            android:layout_width="0dp"/>

        <ImageView
            android:id="@+id/instruction_list_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/instruction_text_two"
            app:layout_constraintStart_toStartOf="@id/instruction_subtitle"
            app:layout_constraintTop_toTopOf="@id/instruction_text_two"
            app:srcCompat="@drawable/list" />

        <TextView
            android:id="@+id/instruction_text_two"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/instruction_text_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/instruction_list_image"
            app:layout_constraintTop_toBottomOf="@id/instruction_text_one" />

        <TextView
            android:id="@+id/button_instruction_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:textStyle="bold"
            android:text="@string/button_next"
            android:textColor="@color/color_light_brand_color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction_text_two" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>